<resources>
    <string name="app_name">MeetYourFriends</string>
    <string name="facebook_app_id">1502871996463931</string>
    <!--<string name="google_maps_api_key">AIzaSyBwRrDYl7nHOy_QK9ERNSsXDJCDaVaPAk0</string>-->
    <string name="google_maps_api_key">AIzaSyDSduchQQv2t1Zsp1VTwFtM4ec-IjqfdjA</string>
    <string name="fb_login_protocol_scheme">fb1502871996463931</string>
    <string name="confirmed_event">Confirmed Events</string>
    <string name="planned_events">Planned Events</string>
    <string name="schedule">Schedule</string>
    <string name="friends">Friends</string>
    <string name="home">home</string>
    <string name="menu_item">Menu Item</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="invite_me">Invite me!</string>
    <string name="create_new_event">Create new Event!</string>
    <string name="invite_friends">Invite friends to event!</string>
    <string name="find_place">Find place for your event!</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="add_event">Add Event</string>
    <string name="name_your_event">Name your event</string>
    <string name="event_name">Event name</string>
    <string name="phone">Phone: %s</string>
    <string name="email">Email: %s</string>
    <string name="created_new_event">Created new event</string>
    <string name="undo">UNDO</string>
    <string name="added_friend">Added %s to your event!</string>
    <string name="chats">Chats</string>
    <string name="you_do_not_have_any_events_yet">You do not have any events yet</string>
    <string name="create_new_with">Create new with</string>
    <string name="amount_of_participants">%d participants</string>
    <string name="your_message">Your message</string>
    <string name="change_event">Change Event</string>
    <string name="choose_your_event">Choose your event!</string>
    <string name="you_organize_events">You organize %s</string>
    <string name="you_organize_no_events">You organize no events!</string>
    <string name="date">Date: %s</string>
    <string name="invite_more_friends">invite more friends</string>
    <string name="participant_image">participant image</string>
    <string name="add_description">add description</string>
    <string name="event_description">Event description</string>
    <string name="description">Description</string>
    <string name="no_participants_in_this_event">No participants in this event!</string>
    <string name="participants">Participants</string>
    <string name="organizer">Organizer:</string>
    <string name="delete_event">Delete event</string>
    <string name="do_you_really_want_to_delete_this_event">Do you really want to delete this event?</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="do_you_really_want_to_leave_this_event">Do you really want to leave this event?</string>
    <string name="date_text">Date</string>
    <string name="confirm_date">confirm date</string>
    <string name="your_date_suggestion">Your date suggestion: \n%s</string>
    <string name="your_time_suggestion">Your time suggestion: \n%s</string>
    <string name="chosen_date">You chose date: %s</string>
    <string name="you_have_any_questionnaires_to_fill">You have any questionnaires to fill!</string>
    <string name="find_places">find places</string>
    <string name="empty_event_name">You have to precized event name</string>
    <string name="empty_event_description">Please, precized event description</string>
    <string name="please_choose_icon_for_your_event">Please choose icon for your event!</string>
    <string name="manage_your_events">Manage Your Events!</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="rating">Rating: %d</string>
    <string name="meters">%s m</string>
    <string name="minutes">%d min</string>
    <string name="kilometers">%s km</string>
    <string name="find_venues_for_your_event">Find places for your Event!</string>
    <string name="no_results_for_type_and_kayword">No results for type and kayword: %s</string>
    <string name="please_turn_on_gps">Please Turn ON your GPS Connection</string>
    <string name="review">Review</string>
    <string name="opening_hours_is_not_precized">Opening hours is not precized for this event</string>
    <string name="venues">Venues</string>
    <string name="vote_for_this_place">vote for this place !</string>
    <string name="chosen_venue">You choose %s</string>
    <string name="your_vote_for_event_date">Your vote for event date: %s</string>
    <string name="change_your_vote">change your vote!</string>
    <string name="your_vote_for_venue">Your vote for venue:</string>
    <string name="finish_voting">finish voting</string>
    <string name="venue">venue</string>
    <string name="no_confirmed_events_yet">No confirmed events yet!</string>
    <string name="no_planned_events_yet">No planned events yet!</string>
    <string name="firstly_add_places">Firstly, add places for this event</string>
    <string name="loading">Loading</string>
    <string name="search_all_nearby_places">Search all nearby places</string>

    <plurals name="events">
        <item quantity="one">the event, you can invite more friends to it!</item>
        <item quantity="other">%d events, choose one to invite more people!</item>
    </plurals>
    <plurals name="date">
        <item quantity="one">not precized yet</item>
        <item quantity="other">%s</item>
    </plurals>
</resources>
