<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppThemeNoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event_detail.EventDetailActivity">
    <!--
        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/AppThemeNoActionBar"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
                app:toolbarId="@+id/toolbar">

       -->         <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->

    <!--
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    -->

    <com.example.marcin.meetfriends.ui.create_event.VerticalScrollview
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/beer_event_icon"
                app:layout_collapseMode="parallax" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/eventNameInputLayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:scrollbars="vertical">

                <EditText
                    android:id="@+id/eventNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/event_name"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/eventDescriptionInputLayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:scrollbars="vertical">

                <EditText
                    android:id="@+id/eventDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/findPlacesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/invite_button_selector"
                android:text="@string/find_place"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/invite_button_selector"
                android:text="@string/create_new_event"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </com.example.marcin.meetfriends.ui.create_event.VerticalScrollview>

    <FrameLayout
        android:id="@+id/snackBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomNavigationView" />
</android.support.design.widget.CoordinatorLayout>