<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppThemeNoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event_detail.EventDetailActivity">

    <com.example.marcin.meetfriends.ui.create_event.VerticalScrollview
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="300dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/backgroundImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp">

                    <ImageView
                        android:id="@+id/eventImage"
                        android:layout_width="wrap_content"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop" />

                </android.support.v7.widget.CardView>

                <ImageButton
                    android:id="@+id/eventIconButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignStart="@+id/backgroundImageButton"
                    android:layout_below="@+id/backgroundImageButton"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="-50dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/circle_event_icon" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/eventNameInputLayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:scrollbars="vertical">

                <EditText
                    android:id="@+id/eventNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/event_name"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/eventDescriptionInputLayout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:scrollbars="vertical">

                <EditText
                    android:id="@+id/eventDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/findPlacesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/invite_button_selector"
                android:text="@string/find_place"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/invite_button_selector"
                android:text="@string/create_new_event"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </com.example.marcin.meetfriends.ui.create_event.VerticalScrollview>


</android.support.design.widget.CoordinatorLayout>